added htmls for items, item